--- a/src/app/pages/create-ride/create-ride.component.scss
+++ b/src/app/pages/create-ride/create-ride.component.scss
@@ -51,6 +51,33 @@
         font-size: 2.5em;
         font-weight: bold;
       }
+      .recurrence{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+        border: none;
+
+        label {
+          font-size: 1.5em;
+          margin-left: 0.5em;
+        }
+
+        input[type="radio"] {
+          width: 1.5em;
+          height: 1.5em;
+        }
+        .recurrence_radio {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+
+          div{
+            margin: 0.5em 0;
+          }
+        }
+      }
 
       .container__hero__radio {
         display: flex;
@@ -135,10 +162,15 @@
     }
   }
 }
-  .recurrence{
-    display: flex;
-    flex-direction: column !important;
-    input{
-    }
+
+.label{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-bottom: 0;
+
+  input {
+    margin : 0.5em 0 0.5em 0 !important;
   }
+}
 
