--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
     </div>
   </nav>
   <div class="menu">
-    <a routerLink="mon-compte">Mon compte</a>
-    <a class="logout" (click)="logout.emit(true)">Se déconnecter</a>
+    <a (click)="menu()" routerLink="mon-compte">Mon compte</a>
+    <a (click)="menu()" class="logout" (click)="logout.emit(true)">Se déconnecter</a>
   </div>
 </header>
