--- a/src/app/shared/components/user-infos/user-infos.component.scss
+++ b/src/app/shared/components/user-infos/user-infos.component.scss
@@ -8,6 +8,7 @@
     & .infos {
         margin: 2em;
         padding: 0 5em 0 5em;
+        position: relative;
         
 
         & .up {
@@ -18,10 +19,12 @@
 
         & .down {
             display: flex;
-            justify-content: space-between; 
+            justify-content: flex-end; 
             align-items: center;     
             color: $secondary-color;  
             padding-right: 1%;
+            margin-right: 1.5em;
+            margin-top: 1em;
 
             & a:hover {
                 font-weight: bold;
@@ -31,8 +34,8 @@
 
         & .picture {
             border-radius: 15em;
-            width: 15%;
-            height: 15%;
+            width: 200px;
+            height: 200px;
         }
     }
 
@@ -75,6 +78,7 @@
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    
                 }
         
                 & .cancel {
@@ -108,10 +112,25 @@
 /* Modal Content */
 .modal-content {
     background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 2em;
+    width: 50%;
+    margin: auto;
+
+    h2 {
+        margin-bottom: 1em;
+        color: $dark-color;
+    }
+
+    input {
+        font-size: 1em;
+    }
 }
 
 /* The Close Button */
@@ -120,6 +139,9 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
 
 #close:hover,
