--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -24,6 +24,13 @@
         flex-direction: column;
         padding-top: 2em;
 
+        .conv {
+            background-color: orange;
+            width: 90vh;
+            margin: 1em;
+            padding: 1em;
+            border-radius: 0.5em;
+        }
     }
 
     & .right-panel {
@@ -35,8 +42,6 @@
         padding: 2em;
 
         .messages {
-
-            overflow-y: scroll;
 
             .userIsSender {
                 border-radius: 2em;
