--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -16,6 +16,7 @@
     </div>
   </nav>
   <div class="menu">
+    <a (click)="menu()" routerLink="messagerie">Messages</a>
     <a (click)="menu()" routerLink="mon-compte">Mon compte</a>
     <a (click)="menu()" class="logout" (click)="logout.emit(true)">Se déconnecter</a>
   </div>
