--- a/src/app/pages/auth/confirm/confirm.component.html
+++ b/src/app/pages/auth/confirm/confirm.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container__info" *ngIf="!token">
     <h1>Bienvenue chez Covoitons !</h1>
-    <p>Un email de confirmation à était envoyé sur votre email d'entreprise.</p>
+    <p>Un email de confirmation a été envoyé sur votre email d'entreprise.</p>
     <p>Veillez confirmer votre compte en cliquant sur le lien dans l'email.</p>
   </div>
 
