--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,7 +4,7 @@
       <h3>Covoitons</h3>
       <a routerLink="trajets">Rechercher un trajet</a>
       <a *ngIf="user" routerLink="nouveau">Créer un trajet</a>
-      <a href="">FAQ</a>
+      <a routerLink="faq">FAQ</a>
     </div>
     <div *ngIf="user">
       <h3>Compte</h3>
