--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -22,6 +22,7 @@ nav {
       width: 50px;
       height: 50px;
       border-radius: 50%;
+      margin-right: -20px;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -84,7 +85,7 @@ nav {
     position: relative;
     display: flex;
     align-items: center;
-    margin: 0 1.5em;
+    margin: 0 1em;
     color: white;
     font-size: 1.2em;
     height: 50px;
@@ -118,7 +119,7 @@ nav {
 }
 
 .arrow {
-  width: 50px!important;
+  width: 40px!important;
   margin: 0!important;
   margin-left: 10px!important;
 }
